--- a/exercicios/links01.html
+++ b/exercicios/links01.html
@@ -11,5 +11,10 @@
     <h2>URL Absoluta</h2>
     <a href="http://www.google.com.br">Google 1</a><br>
     <a href="http://www.google.com.br" target="_blank">Google 2</a>
+
+    <h2>URL Relativa</h2>
+    <a href="index.html">Voltar 1</a><br>
+    <a href="/index.html">Voltar 2</a><br>
+    <a href="../index.html">Voltar 3</a>
 </body>
 </html>
