--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
         <a href="exercicios/links01.html">Link #01</a> <br><br>
 
+        <a href="exercicios/links02.html">Link #02</a> <br><br>
+
     </nav>
 
     <section id="conteudo"></section> <!--nosso conteudo e exebido aqui com o ajax trazendo outro arquivo para ca-->
