--- a/exercicios/links02.html
+++ b/exercicios/links02.html
@@ -7,13 +7,16 @@
     <title>Links #2</title>
 </head>
 <body>
-    <h1>Links #2</h1>
+    <h1 id="inicio">Links #2</h1>
     <h2>E-mail</h2>
     <a href="mailto:marcosserra133@gmail.com">Entre em contato</a><br><br>
 
     <div id="Noticia" style="position:absolute;top:2000px">
         <h1>Noticia Buemba</h1>
-        
+        <p>Não era nada ;)</p>
+        <a href="#inicio">Voltar para o inicio</a>
     </div>
+    <p>Navegando dentro da propria pagina</p><br>
+    <a href="#Noticia">Ir para a noticia</a>
 </body>
 </html>
