--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
         <a href="exercicios/links02.html">Link #02</a> <br><br>
 
+        <a href="exercicios/tabelas.html">Tabelas</a> <br><br>
+
     </nav>
 
     <section id="conteudo"></section> <!--nosso conteudo e exebido aqui com o ajax trazendo outro arquivo para ca-->
