--- a/css/especificidade2.html
+++ b/css/especificidade2.html
@@ -6,6 +6,22 @@
     <title>Especificidade CSS</title>
     <style>
         /* https://specificity.keegan.st/ */
+        /* calculadora de especificidade  */
+        /*
+        1. inline
+        2. ID
+        3. classe, pseudo-classe, atributo
+        4. elementos e pseudos-elementos
+        */
+
+        body { font-size: 40px; }
+
+        div { background-color: #00b; color: #fff; }
+        div[wm-cor] { background-color: darkorange; }
+        div:hover { background-color: purple; }
+        div.estilo { background-color: green; }
+        #unico1, #unico2 { background-color: #000; }
+
     </style>
 </head>
 
